--- a/css/styles.css
+++ b/css/styles.css
@@ -1,17 +1,24 @@
 /* Definición de colores */
 :root {
-    --color-primario: #333;
-    --color-secundario: #9e9e9e;
-    --color-fondo: #fffeb3;
-    --color-texto-general: #000;
-    --color-texto-blanco: #fff;
-    --color-borde: #ddd;
-    
+    /* Definición de colores */
+    --color-primario: #009688; /* Verde azulado oscuro */
+    --color-secundario: #4db6ac; /* Verde azulado claro */
+    --color-fondo: #e0f2f1; /* Verde menta claro */
+    --color-texto-general: #004d40; /* Verde oscuro */
+    --color-texto-blanco: #ffffff; /* Blanco */
+    --color-borde: #b2dfdb; /* Verde menta más suave */
+
+    /* Definición de fuentes */
+    --fuente-principal: 'Lato', sans-serif;
+    --fuente-secundaria: 'Merriweather', serif;
 }
+
+
 
 /* Estilos generales */
 body {
-    font-family: Arial, sans-serif;
+    font-family: var(--fuente-principal);
+    font-size: 16px;
     line-height: 1.6;
     margin: 0;
     padding: 0;
@@ -27,7 +34,27 @@ header {
 }
 
 header h1 {
+    font-family: var(--fuente-secundaria);
+    font-size: 2.5rem;
     margin: 0;
+}
+
+h2 {
+    font-family: var(--fuente-secundaria);
+    font-size: 2rem; /* 32px */
+    margin: 0;
+}
+
+h3 {
+    font-family: var(--fuente-secundaria);
+    font-size: 1.5rem; /* 24px */
+    margin: 0;
+}
+
+p {
+    font-family: var(--fuente-principal);
+    font-size: 1rem; /* 16px */
+    margin-bottom: 1rem;
 }
 
 section {
@@ -42,12 +69,19 @@ table {
     border: 1px solid var(--color-borde);
     width: 100%;
     border-collapse: collapse;
+    font-family: var(--fuente-principal);
+    font-size: 1rem;
 }
 
 table, th, td {
     border: 1px solid var(--color-borde);
     padding: 8px;
     text-align: left;
+}
+
+button {
+    font-family: var(--fuente-principal);
+    font-size: 1rem; /* 16px */
 }
 
 /* Estilos específicos */
@@ -93,7 +127,6 @@ footer p{
     overflow-x: auto; /* Permite el desplazamiento horizontal */
     scroll-behavior: smooth;
     gap: 1rem;
-    padding: 1rem 0;
     -ms-overflow-style: none;  /* Para Internet Explorer y Edge */
     scrollbar-width: none; /* Para Firefox */
 }
@@ -137,20 +170,28 @@ footer p{
     position: absolute;
     top: 50%;
     transform: translateY(-50%);
-    background-color: var(--color-primario);
+    background: linear-gradient(to right, rgba(158, 158, 158, 0.5), rgba(158, 158, 158, 0.8));
     color: var(--color-texto-blanco);
     border: none;
-    padding: 0.5rem;
+    padding: 0.5rem 1rem;
     cursor: pointer;
     z-index: 10;
+    border-radius: 0.5rem;
+    box-shadow: 0 4px 8px rgba(0, 0, 0, 0.2);
 }
 
 .nav-button.left {
     left: 0;
+    height: calc(100% + 1rem);
 }
 
 .nav-button.right {
     right: 0;
+    height: calc(100% + 1rem);
+}
+
+.nav-button.hidden {
+    display: none;
 }
 
 .img-frente, .img-detras {
